# ROS_SplinePathMotionProfiling

./: CMakeLists.txt  package.xml  readme.md  setup.py
analysis/: ROS_SplinePathMotionProfilingAnalysis.Rmd  ROS_SplinePathMotionProfilingAnalysis.html  analysis.Rproj
config/: rviz_setup.rviz
launch/: rviz.launch  turtlebot_sim.launch  world_sim.launch
pid_tuning_err_logs/: err_log.csv  err_log2.csv  err_log3.csv  err_log_pct_A.csv  err_log_pct_B.csv  err_log_pct_C.csv  err_log_pct_D.csv
spline_err_logs/: err_log_feedback_AP15_097657_AI0_000083_AD14_949805.csv  err_log_feedback_AP15_152344_AI0_000083_AD15_357032.csv  err_log_feedback_INIT_PID.csv  err_log_feedback_LP0_847656_LI0_002552_LD0_529297.csv  err_log_feedback_NO_PID.csv
src/: NavAnalyzer.py  Navigation.py  PID.py  PIDTuner.py  QuinticSpline.py  SimulationSpeed.py  frames.gv  handler.py
srv/: GetNavCriteriaPlan.srv  GetNavSimTest.srv  GetSimpleSplinePlan.srv
worlds/: final_maze.world  turtlebot.world
